--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ google_analytics: "G-EXE1PJ8CR2"
 
 content:
   categories:
-    - name: 常用推荐
+    - name: 工作网址
       sites:
         - name: Dribbble
           description: 全球UI设计师作品分享平台。
