--- a/config.yml
+++ b/config.yml
@@ -60,11 +60,11 @@ content:
         - name: Medium
           description: Read, write and share stories that matter
           url: https://medium.com/
-    - name: 界面灵感
+    - name: 学习教程
       sites:
-        - name: 咕噜素材
-          description: 质量很高的设计素材网站（推荐）
-          url: https://www.gulusucai.com/
+        - name: 百度SEO优化
+          description:百度SEO优化视频教程
+          url: https://ke.seowhy.com/course/5
         - name: 设计周刊
           description: 最新设计资讯（每天更新）
           url: https://www.shejizhoukan.com/
